--- a/CUE4Parse-Conversion/CUE4Parse-Conversion.csproj
+++ b/CUE4Parse-Conversion/CUE4Parse-Conversion.csproj
@@ -36,9 +36,14 @@
 
   <ItemGroup>
     <None Remove="Resources\Detex.dll" />
-    <EmbeddedResource Include="Resources\Detex.dll" />
+    <EmbeddedResource Include="Resources\Detex.dll" LogicalName="CUE4Parse_Conversion.Resources.Detex.dll" />
+    <None Remove="Resources\libdetex.so.0.1.2" />
+    <EmbeddedResource Include="Resources\libdetex.so.0.1.2" LogicalName="CUE4Parse_Conversion.Resources.Detex.so" />
+    
     <None Remove="Resources\tegra_swizzle_x64.dll" />
-    <EmbeddedResource Include="Resources\tegra_swizzle_x64.dll" />
+    <EmbeddedResource Include="Resources\tegra_swizzle_x64.dll" LogicalName="CUE4Parse_Conversion.Resources.tegra_swizzle_x64.dll" />
+    <None Remove="Resources\libtegra_swizzle.so" />
+    <EmbeddedResource Include="Resources\libtegra_swizzle.so" LogicalName="CUE4Parse_Conversion.Resources.tegra_swizzle_x64.so" />
   </ItemGroup>
 
 </Project>
