--- a/CUE4Parse-Conversion/CUE4Parse-Conversion.csproj
+++ b/CUE4Parse-Conversion/CUE4Parse-Conversion.csproj
@@ -31,19 +31,19 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Resources" />
-  </ItemGroup>
-
-  <ItemGroup>
     <None Remove="Resources\Detex.dll" />
     <EmbeddedResource Include="Resources\Detex.dll" LogicalName="CUE4Parse_Conversion.Resources.Detex.dll" />
-    <None Remove="Resources\libdetex.so.0.1.2" />
-    <EmbeddedResource Include="Resources\libdetex.so.0.1.2" LogicalName="CUE4Parse_Conversion.Resources.Detex.so" />
+    <None Remove="Resources\libdetex-x86_64.so.0.1.2" />
+    <EmbeddedResource Include="Resources\libdetex-x86_64.so.0.1.2" LogicalName="CUE4Parse_Conversion.Resources.Detex.x64.so" />
+    <None Remove="Resources\libdetex-arm64.so.0.1.2" />
+    <EmbeddedResource Include="Resources\libdetex-arm64.so.0.1.2" LogicalName="CUE4Parse_Conversion.Resources.Detex.arm64.so" />
     
     <None Remove="Resources\tegra_swizzle_x64.dll" />
     <EmbeddedResource Include="Resources\tegra_swizzle_x64.dll" LogicalName="CUE4Parse_Conversion.Resources.tegra_swizzle_x64.dll" />
-    <None Remove="Resources\libtegra_swizzle.so" />
-    <EmbeddedResource Include="Resources\libtegra_swizzle.so" LogicalName="CUE4Parse_Conversion.Resources.tegra_swizzle_x64.so" />
+    <None Remove="Resources\libtegra_swizzle-x86_64.so" />
+    <EmbeddedResource Include="Resources\libtegra_swizzle-x86_64.so" LogicalName="CUE4Parse_Conversion.Resources.tegra_swizzle.x64.so" />
+    <None Remove="Resources\libtegra_swizzle-arm64.so" />
+    <EmbeddedResource Include="Resources\libtegra_swizzle-arm64.so" LogicalName="CUE4Parse_Conversion.Resources.tegra_swizzle.arm64.so" />
   </ItemGroup>
 
 </Project>
