--- a/CUE4Parse-Natives/CMakeLists.txt
+++ b/CUE4Parse-Natives/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.10)
 project(CUE4Parse-Natives CXX)
 
 set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
 
 if (EXISTS "${PROJECT_SOURCE_DIR}/ACL/external/acl/includes")
