--- a/CUE4Parse-Natives/Oodle/CMakeLists.txt
+++ b/CUE4Parse-Natives/Oodle/CMakeLists.txt
@@ -2,7 +2,15 @@ cmake_minimum_required(VERSION 3.10)
 project(oodle2 CXX)
 
 set(CMAKE_CXX_STANDARD 11)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mavx2")
+
+# Only enable AVX2 for x86/x86_64 architectures
+if(CMAKE_SYSTEM_PROCESSOR MATCHES "(x86)|(X86)|(amd64)|(AMD64)")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mavx2")
+endif()
+
+if(CMAKE_SYSTEM_PROCESSOR MATCHES "arm64|aarch64")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=armv8-a")
+endif()
 
 include_directories(${PROJECT_SOURCE_DIR}/external/oodle2/core)
 include_directories(${PROJECT_SOURCE_DIR}/external/oodle2/base)
