--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "CUE4Parse-Natives/ACL/external/acl"]
 	path = CUE4Parse-Natives/ACL/external/acl
 	url = https://github.com/nfrechette/acl.git
+[submodule "CUE4Parse-Natives/VgmStream/external/vgmstream"]
+	path = CUE4Parse-Natives/VgmStream/external/vgmstream
+	url = https://github.com/vgmstream/vgmstream.git
