fix: more vgmstream windows issues

--- a/CUE4Parse-Natives/VgmStream/CMakeLists.txt
+++ b/CUE4Parse-Natives/VgmStream/CMakeLists.txt
@@ -56,6 +56,9 @@ if(WIN32)
             /wd4267  # conversion from 'size_t' to 'type', possible loss of data
             /wd4244  # conversion from 'type1' to 'type2', possible loss of data
             /wd4018  # signed/unsigned mismatch
+            /wd4101  # unreferenced local variable
+            /wd4334  # 32-bit shift implicitly converted to 64 bits
+            /wd4311  # pointer truncation
         )
     endif()
 endif()
